apps/docs/deployment-docs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-docs
  namespace: griz
  labels:
    app: nginx-docs
    service: s1
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-docs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-docs
  namespace: griz
  labels:
    app: nginx-docs
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-docs
      version: v1
  template:
    metadata:
      labels:
        app: nginx-docs
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nas-volume
            mountPath: /usr/share/nginx/html
            subPath: ""
      volumes:
        - name: nas-volume
          persistentVolumeClaim:
            claimName: docs-pvc
